Fixed an issues with javascript canvas elements not aligning with the coordinates

--- a/static/environment.css
+++ b/static/environment.css
@@ -15,20 +15,20 @@ body, html {
 main {
     display: flex;
     flex-direction: column;
-    flex-grow: 8;
+    flex-basis: 50%;
 }
 
 canvas {
+    flex-grow: 1;
     width: 100%;
     height: 100%;
-    flex-grow: 1;
 }
 
 aside {
     display: flex;
     justify-content: flex-start;
     flex-direction: column;
-    flex-basis: 0;
+    flex-basis: 25%;
     flex-grow: 1;
     background-color: rgba(255, 255, 255, 0.05);
 }
